itworking thanks yt

--- a/nice/style.css
+++ b/nice/style.css
@@ -68,3 +68,22 @@ body{
     background: linear-gradient(270deg, #ff994f, #fa6d87);
     cursor: pointer;
 }
+.contact-left button img{
+    height: 15px;
+}
+.contact-right img{
+    width: 500px;
+}
+@media (max-width:800px) {
+    .contact-inputs{
+        width: 80vw;
+    }
+    .contact-right{
+        display: none;
+    }
+}
+
+
+
+
+
